--- a/bootfs/etc/sysconfig/config/smb/smb.conf
+++ b/bootfs/etc/sysconfig/config/smb/smb.conf
@@ -33,6 +33,9 @@ update encrypted = Yes
 socket options = TCP_NODELAY SO_KEEPALIVE SO_RCVBUF=65535 SO_SNDBUF=65535 IPTOS_LOWDELAY
 smb passwd file = /usr/local/samba/private/smbpasswd
 passdb expand explicit = no
+printcap name = /etc/lprng/printcap
+load printers = yes
+printing = lprng
 
 include=/etc/sysconfig/config/smb/host.inc
 include=/etc/sysconfig/config/smb/network.inc
