Add binary and library path to runtime, and other fixes

--- a/bootfs/etc/sysconfig/config/smb/smb.conf
+++ b/bootfs/etc/sysconfig/config/smb/smb.conf
@@ -3,7 +3,7 @@ security = user
 map to guest = Bad User
 use sendfile = yes
 hide dot files = yes
-veto files = /.ftpaccess/.btpd/
+veto files = /.ftpaccess/.btpd/.pkg/
 dns proxy = no
 interfaces = 169.254.0.253/255.255.0.0
 disable spoolss = yes
