--- a/bootfs/etc/sysconfig/libexec/modules/service/service.conf
+++ b/bootfs/etc/sysconfig/libexec/modules/service/service.conf
@@ -1,7 +1,7 @@
 # PATH SETING
-dlna_prefix=/usr/libexec/modules/service
-FILE=`ls $dlna_prefix`
+service_prefix=/usr/libexec/modules/service
+FILE=`ls $service_prefix`
 
 for file in $FILE; do
-  [ "$file" == "service.conf" ] || . $dlna_prefix/$file
+  [ "$file" == "service.conf" ] || . $service_prefix/$file
 done
