--- a/bootfs/etc/sysconfig/libexec/modules/modules.conf
+++ b/bootfs/etc/sysconfig/libexec/modules/modules.conf
@@ -1,8 +1,7 @@
 # READ system.conf
 MODULES_PATH=/usr/libexec/modules
-cd $MODULES_PATH
-MODULES_DIR=`ls`
+MODULES_DIR=`ls ${MODULES_PATH}`
 
 for i in $MODULES_DIR; do
- [ -d $i ] && . ${MODULES_PATH}/${i}/${i}.conf
+ [ -d ${MODULES_PATH}/$i ] && . ${MODULES_PATH}/${i}/${i}.conf
 done
