Remove from config partition files cleared on startup

--- a/bootfs/etc/sysconfig/config/smb/smb.conf
+++ b/bootfs/etc/sysconfig/config/smb/smb.conf
@@ -40,4 +40,4 @@ printing = lprng
 include=/etc/sysconfig/config/smb/host.inc
 include=/etc/sysconfig/config/smb/network.inc
 include=/etc/sysconfig/config/smb/print.inc
-include=/etc/sysconfig/config/smb/shares.inc
+include=/etc/smb/shares.inc
